fix layout issues
- add router active links
- fix dashboard page

--- a/cmd/ui/assets/src/app/app.component.scss
+++ b/cmd/ui/assets/src/app/app.component.scss
@@ -4,4 +4,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+
+  .content {
+    margin-top: 100px;
+    min-height: 69%;
+  }
 }
