--- a/cmd/ui/assets/src/app/system/cloud-accounts/new-cloud-account/new-cloud-account.component.scss
+++ b/cmd/ui/assets/src/app/system/cloud-accounts/new-cloud-account/new-cloud-account.component.scss
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	overflow: scroll;
 
 	h1 {
 		margin-left: 48px;
